2008-11-05  Hui Zhu  <teawater@gmail.com>

	* record.c (record_wait): Check breakpint before forward
	execute in replay mode.
	Check breakpoint use function "breakpoint_inserted_here_p"
	in replay mode.

2008-10-24  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (handle_inferior_event): Handle dynamic symbol
	resolution in reverse.

2008-10-19  Hui Zhu  <teawater@gmail.com>
 
	* infcmd.c (kill_if_already_running): Remove process record
	warning code.

2008-10-19  Hui Zhu  <teawater@gmail.com>

	* infrun.c (handle_inferior_event): Set "stop_pc" when
	TARGET_WAITKIND_NO_HISTORY.

2008-10-18  Pedro Alves  <pedro@codesourcery.com>

	* infrun.c (adjust_pc_after_break): Do nothing if executing in
	reverse.

2008-10-18  Hui Zhu  <teawater@gmail.com>

	Remove "to_support_record_wait".

	* target.c (add_target): Remove "to_support_record_wait".
	* target.h (target_ops): Ditto.
	* linux-nat.c (linux_nat_add_target): Ditto.
	* record.h (RECORD_TARGET_SUPPORT_RECORD_WAIT): This macro is removed.

2008-10-15  Hui Zhu  <teawater@gmail.com>

	Change "record-auto-delete" to "record-stop-at-limit".

	* record.c (record_insn_max_mode): Change to
	"record_stop_at_limit".
	(record_check_insn_num): Ditto.
	(_initialize_record): Ditto.

2008-10-13  Michael Snyder  <msnyder@vmware.com>

	* remote.c (remote_wait): Remove handling of "E6" no_history error.

2008-10-10  Michael Snyder  <msnyder@vmware.com>

	* remote.c (remote_wait): Recognize "replaylog" reply as part 
	of 'T' stop event (NO_HISTORY).
	Declare "end of replay history" error reply as deprecated.

2008-10-09  Michael Snyder  <msnyder@vmware.com>

	* reverse.c (exec_reverse_once): Eliminate fixed-size buffer,
	use xstrprintf.

	* infcmd.c (finish_forward): New function, abstracted from 
	finish_command.
	(finish_command): Abstract out finish_forward for symmetry.
	* infrun.c (use_displaced_stepping): Add comment.

2008-10-08  Hui Zhu  <teawater@gmail.com>

	* record.c (record_open): Reset after push_target.
